--- a/public/styles.css
+++ b/public/styles.css
@@ -52,14 +52,22 @@ body {
   width: 250px;
 }
 
-.outerDiv {
-  width: 500px;
-}
-
 .workingInputContainer {
   width: inherit;
 }
 
 .workingInputForm {
   width: inherit;
+}
+
+@media screen and (min-width: 600px) {
+  .outerDiv {
+    width: 500px;
+  }
+}
+
+@media screen and (max-width: 599) {
+  .outerDiv {
+    width: 100vw;
+  }
 }
