--- a/public/styles.css
+++ b/public/styles.css
@@ -62,12 +62,12 @@ body {
 
 @media screen and (min-width: 600px) {
   .outerDiv {
-    width: 750px;
+    width: 100vw;
   }
 }
 
 @media screen and (max-width: 599) {
   .outerDiv {
-    width: 750px;
+    width: 100vw;
   }
 }
