--- a/public/styles.css
+++ b/public/styles.css
@@ -1,66 +1,76 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #b9e9ec;
     min-height: 70vh;
-    padding: 1rem;
+    padding: 0;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
     color: hsl(198, 1%, 29%);
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 130%;
-  }
-  
-  .container {
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.container {
     width: 100%;
-    height: auto;
+    height: 100%;
     min-height: 380px;
     min-width: 250px;
     background: #f2f6f8;
     background-size: 25px 25px;
     border-radius: 0px 0px 10px 10px;
-    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
+    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+        0px 4px 5px 0px rgba(0, 0, 0, 0.14),
+        0px 1px 10px 0px rgba(0, 0, 0, 0.12);
     padding: 1rem;
     box-sizing: border-box;
-  }
-  .heading {
+}
+.heading {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 1rem;
-  }
+}
 
-  h1 {
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+h1 {
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
     padding: 0.2rem 1.2rem;
     border-radius: 10%;
     font-size: 1.5rem;
-  }
-  
-  li {
+}
+
+li {
     text-align: left;
     position: relative;
     padding: 0.5rem;
-  }
-
+}
 
 .TaskList-header {
-  transform: translate(5%, 5%);
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
-  margin-bottom: 10px;
-  width: 250px;
+    transform: translate(5%, 5%);
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
+    margin-bottom: 10px;
+    width: 250px;
 }
 
 .workingInputContainer {
-  width: inherit;
+    width: inherit;
+    height: min-content;
 }
 
 .workingInputForm {
-  width: inherit;
+    width: inherit;
+    height: min-content;
 }
 
-@media screen and (min-width: 600px) {
+/* @media screen and (min-width: 600px) {
   .outerDiv {
     width: 500px;
   }
@@ -70,4 +80,8 @@ body {
   .outerDiv {
     width: 100vw;
   }
-}
+} */
+
+/* .outerDiv {
+    width: 800px;
+} */
