--- a/public/styles.css
+++ b/public/styles.css
@@ -26,7 +26,7 @@ body {
     min-width: 250px;
     background: #f2f6f8;
     background-size: 25px 25px;
-    border-radius: 0px 0px 10px 10px;
+    /*border-radius: 0px 0px 10px 10px;*/
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
         0px 4px 5px 0px rgba(0, 0, 0, 0.14),
         0px 1px 10px 0px rgba(0, 0, 0, 0.12);
@@ -69,6 +69,7 @@ li {
     width: inherit;
     height: min-content;
 }
+
 
 /* @media screen and (min-width: 600px) {
   .outerDiv {
